# supopkite

./: CMakeLists.txt  README.md
ext/kissfft/: COPYING
ressources/: 3Dkite.stl
src/: camera_calibration.cpp  generate_database.cpp  generate_database.hpp  homography.cpp  homography.hpp  main.cpp  orientation_4pts.cpp  orientation_4pts.hpp  point_projection.cpp  point_projection.hpp  renderer.cpp  renderer.hpp  tracking.cpp  tracking.hpp  vector.cpp  vector.hpp
